# subarr

./: .env.example  .gitignore  NOTES.md  README.md
k8s/: api.yaml  configmap.yaml  ingress.yaml  ml-worker.yaml  pvc.yaml  redis.yaml
ml-worker/: .env.gpu.example  Dockerfile  Dockerfile.gpu  character_id.py  config.py  diarization.py  docker-compose.gpu.yml  emotion.py  overlap_detection.py  pipeline.py  post_id_merge.py  requirements.gpu.txt  requirements.txt  setup-gpu-worker.ps1  speaker_mapping.py  storage.py  tmdb.py  translation.py  worker.py
ml-worker/tests/: test_character_id.py  test_config.py  test_diarization.py  test_emotion.py  test_overlap_detection.py  test_pipeline.py  test_post_id_merge.py  test_speaker_mapping.py  test_translation.py
subarr-api/: Cargo.toml  Dockerfile
subarr-api/src/: config.rs  main.rs
subarr-api/src/api/: routes.rs
subarr-api/src/core/: formatter.rs  mod.rs  subtitle.rs
subarr-api/src/models/: mod.rs
subarr-api/src/workers/: mod.rs
